k8s/minio/service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  selector:
    app: minio
  ports:
    - name: api
      protocol: TCP
      port: 9000
      targetPort: 9001
    - name: console
      protocol: TCP
      port: 36337
      targetPort: 36337
  clusterIP: None
